Defect fix, force fluid grid stretch all width available

--- a/less/components/consonant/wrapper.less
+++ b/less/components/consonant/wrapper.less
@@ -34,6 +34,7 @@
 
                 > *:only-child {
                     grid-column: ~ "1/-1";
+                    width: 100vw;
                 }
             }
         }
